<resources>

    <string name="app_name">씨네마천국</string>
    <string name="movieName">군도</string>
    <string name="movieDate">2014.07.23 개봉</string>
    <string name="movieRunningTime">액션 / 137분</string>
    <string name="appName">씨네마천국</string>
    <string name="ticketSell">예매율  5위 1.8%</string>
    <string name="ratingBar">평점</string>
    <string name="ratingText">8.2</string>
    <string name="tickting">예매율</string>
    <string name="ratingNum">5위 1.8%</string>
    <string name="audience">누적관객수</string>
    <string name="peopleCount">839,399명</string>
    <string name="story">줄거리</string>
    <string name="storyText">군도, 백성을 구하라\n양반과 탐관오리들의 착취가 극에 달했던 조선 철종 13년.\n힘 없는 백성의 편이 되어 세상을 바로잡고자 하는 의적떼인 군도(群島), 지리산 추설이 있었다.\n\n쌍칼 도치 vs 백성의 적 조윤\n잦은 자연재해, 기근과 관의 횡포까지 겹쳐 백성들의 삶이 날로 피폐해 져 가는 사이, 나주 대부호의 서자로 조선 최고의 무관 출신인 조윤은 극악한 수법으로 양민들을 수탈, 삼남지방 최고의 대부호로 성장한다. 한편 소, 돼지를 잡아 근근이 살아가던 천한 백정 돌무치는 죽어도 잊지 못할 끔찍한 일을 당한 뒤 군도에 합류, 지리산 추설의 신 거성(新巨姓) 도치로 거듭난다.\n\n뭉치면 백성, 흩어지면 도적! 망할 세상을 뒤집기 위해, 백성의 주인인 새 세상을 향해 도치를 필두로 한 군도는 백성의 적, 조윤과 한 판 승부를 시작하는데...</string>
    <string name="actor">감독/출연</string>
    <string name="allview_text">모두 보기</string>
    <string name="preorder_text">예매하기</string>
    <string name="oneline_text">한줄평</string>
    <string name="director_text">감독</string>
    <string name="appearance_text">출연</string>
    <string name="actor_list">하정우(도치), 강동원(조윤)</string>
    <string name="director_list">윤종빈</string>
    <string name="write_text">작성하기</string>
    <string name="id_Text">kym71**</string>
    <string name="listview_report_text">신고하기</string>
    <string name="listview_comment_text">적당히 재밌다. 오랜만에 잠 안오는 영화 봤네요.</string>
    <string name="listview_time_text">10분전</string>
    <string name="saveButton_text">저 장</string>
    <string name="exitButton_text">취 소</string>
    <string name="writeEdit_text">100자 이내로 작성해주세요.</string>
    <string name="writeText_Text">평점을 입력해 주세요</string>
    <string name="hello_world">Hello world!</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_movie_list">영화 목록</string>
    <string name="movie_list_api">영화 API</string>
    <string name="movie_list_resvation">예매하기</string>
    <string name="movie_menu_usersetting">사용자 설정</string>
    <string name="pagerMovieName1">1. 군 도</string>
    <string name="pagerMovieInfo1">예매율 61.6% | 15세 관람가 | D-1</string>
    <string name="pagerDetail">상세보기</string>
    <string name="pagerMovieName5">5. 럭 키</string>
    <string name="pagerMovieInfo5">예매율 21.7% | 12세 관람가 | D-3</string>
    <string name="pagerMovieInfo4">예매율 21.6% | 15세 관람가 | D-2</string>
    <string name="pagerMovieName4">4. 레지던트 이블</string>
    <string name="pagerMovieName3">3. 더 킹</string>
    <string name="pagerMovieInfo3">예매율 11.2% | 12세 관람가 | D-1</string>
    <string name="pagerMovieName2">2. 공 조</string>
    <string name="pagerMovieInfo2">예매율 61.6% | 15세 관람가 | D-1</string>
    <string name="nav_MovieListString">영화 목록</string>
    <string name="nav_MovieApiString">영화 API</string>
    <string name="nav_MovieResvationString">예매하기</string>
    <string name="app_label">씨네마천국</string>
    <string name="detailString">영화 상세</string>
</resources>
