<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_0"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_movie_list" />
        <item
            android:id="@+id/nav_1"
            android:icon="@drawable/ic_review"
            android:title="@string/movie_list_api" />
        <item
            android:id="@+id/nav_2"
            android:icon="@drawable/ic_book"
            android:title="@string/movie_list_resvation" />
    </group>

    <item android:title="설정">
        <menu>
            <item
                android:id="@+id/ic_setting"
                android:icon="@drawable/ic_settings"
                android:title="@string/movie_menu_usersetting" />
        </menu>
    </item>

</menu>
