<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="10dp">

    //프로필 이미지

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView_proFile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/user1"
        app:civ_border_width="2dp"
        android:layout_marginTop="10dp"
        app:civ_border_color="#FFCCCC"/>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textStyle="bold"
            android:textSize="12dp"
            android:id="@+id/textview_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_Text"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_marginRight="10dp"
                android:id="@+id/textview_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listview_time_text" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="5" />

        </LinearLayout>

        <TextView
            android:textColor="@android:color/black"
            android:layout_marginBottom="10dp"
            android:id="@+id/textview_commenttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listview_comment_text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_thumbsup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="추천 0"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="13dp"
                android:layout_marginLeft="10dp"
                android:background="@android:color/black" />

            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/textview_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listview_report_text" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>